# godot-poc-rs

./: .gitignore  Cargo.toml  Dockerfile.wasm
.cargo/: config.toml
docs/: architecture.md  build-wasm-linux-instructions.md  design.md  godot-wasm-issues.md  plan.md  prd.md  status.md
godot/: project.godot  revolving_match3.gdextension  revolving_match3.gdextension.uid
godot/scenes/: game_board.tscn  main.tscn
godot/src/: main.gd  main.gd.uid
scripts/: build-wasm-docker.sh  build-wasm.sh  build.sh  export-to-macos.sh  export-to-web.sh  serve-web.sh
src/: board.rs  lib.rs  matching.rs  symbols.rs
