[package]
name = "godot-poc-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8"

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
branch = "master"
features = ["experimental-wasm", "experimental-wasm-nothreads", "lazy-function-tables"]

[profile.release]
lto = true
opt-level = 3
strip = true
